.provarCaches/00D5f000005vwGkEAI/objects/rstk__icdhr__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_icdhr</customHelpPage>
    <description>icdhr__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icdhr_div__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  rstk__icdhr_dhrno__c</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icdhr_dhrno__c &amp; &apos;_&apos; &amp;  rstk__icdhr_desc__c</formula>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdhr_desc__c</fullName>
        <inlineHelpText>DHR Description</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdhr_dhrno__c</fullName>
        <inlineHelpText>User defined Device History Record Number</inlineHelpText>
        <label>DHR Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdhr_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Division associated with the DHR</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Device History Record Headers</relationshipLabel>
        <relationshipName>icdhrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdhr_entity__c</fullName>
        <inlineHelpText>Device History Records can be accumulated by Project or Shipped Kit.</inlineHelpText>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Shipped Kit</fullName>
                </value>
                <value>
                    <fullName>Shipped Serialized Item</fullName>
                </value>
                <value>
                    <fullName>Serialized Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icdhr_icitemsrl__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Item Number of Serial Item</inlineHelpText>
        <label>Serialized Item</label>
        <referenceTo>rstk__icitemsrl__c</referenceTo>
        <relationshipLabel>Device History Record Headers</relationshipLabel>
        <relationshipName>icdhrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdhr_pjproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Project associated with this DHR</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Device History Record Headers</relationshipLabel>
        <relationshipName>icdhrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdhr_socust__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>SO Customer associated with this DHR</inlineHelpText>
        <label>Customer Reference</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Device History Record Headers</relationshipLabel>
        <relationshipName>icdhrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdhr_soshipline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>SO Shipment Line associated with this DHR</inlineHelpText>
        <label>Shipped SO Line</label>
        <referenceTo>rstk__soshipline__c</referenceTo>
        <relationshipLabel>Device History Record Headers</relationshipLabel>
        <relationshipName>icdhrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdhr_soshipsrl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Item Number of Serial Item - Shipped</inlineHelpText>
        <label>Shipped Serialized Item</label>
        <referenceTo>rstk__soshipsrl__c</referenceTo>
        <relationshipLabel>Device History Record Headers</relationshipLabel>
        <relationshipName>icdhrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Device History Record</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Device History Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Project_Required</fullName>
        <active>true</active>
        <description>Project is required when entity type is &quot;Project&quot;</description>
        <errorConditionFormula>AND(
ISPICKVAL( rstk__icdhr_entity__c , &apos;Project&apos;),
ISBLANK( rstk__icdhr_pjproj__c ) 
)</errorConditionFormula>
        <errorMessage>Project is required when entity type is &quot;Project&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Serialized_Item_Required</fullName>
        <active>true</active>
        <description>Serialized Item is required when entity type is &quot;Serialized Item&quot;</description>
        <errorConditionFormula>AND(
ISPICKVAL( rstk__icdhr_entity__c , &apos;Serialized Item&apos;),
ISBLANK( rstk__icdhr_icitemsrl__c ) 
)</errorConditionFormula>
        <errorMessage>Serialized Item is required when entity type is &quot;Serialized Item&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Shipped_SO_Line_Required</fullName>
        <active>true</active>
        <description>Shipped SO Line is required when entity type is &quot;Shipped Kit&quot;</description>
        <errorConditionFormula>AND(
ISPICKVAL( rstk__icdhr_entity__c , &apos;Shipped Kit&apos;),
ISBLANK( rstk__icdhr_soshipline__c ) 
)</errorConditionFormula>
        <errorMessage>Shipped SO Line is required when entity type is &quot;Shipped Kit&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Shipped_Serialized_Item_Required</fullName>
        <active>true</active>
        <description>Shipped Serialized Item is required when entity type is &quot;Shipped Serialized Item&quot;</description>
        <errorConditionFormula>AND(
ISPICKVAL( rstk__icdhr_entity__c , &apos;Shipped Serialized Item&apos;),
ISBLANK( rstk__icdhr_soshipsrl__c ) 
)</errorConditionFormula>
        <errorMessage>Shipped Serial Item is required when entity type is &quot;Shipped Serialized Item&quot;</errorMessage>
    </validationRules>
</CustomObject>